--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-fetch": "^1.6.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "socket.io": "^1.7.2",
     "whatwg-fetch": "^2.0.2"
   }
 }
