Refactor resizing function

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mern-boilerplate",
+  "name": "fcc-chart-stock-market",
   "private": true,
   "version": "1.0.0",
   "description": "",
