--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "export NODE_ENV=production && node app.js",
+    "build": "NODE_ENV=production webpack -p --config ./webpack.production.config.js",
     "webpack": "webpack -w",
     "dev": "export NODE_ENV=development && nodemon app.js"
   },
